Closed Bug 1169967 Opened 9 years ago Closed 9 years ago

non-ion build failure in js/src/jit/JitSpewer.h

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: stevensn, Assigned: stevensn)

Details

Attachments

(1 file)

non-ion builds are failing in js/src/jit/JitSpewer.h because MIRGenerator is undefined.

js/src/jit/JitSpewer.h is included from js/src/jit/none/Architecture-none.h
Assignee: nobody → steve
Attachment #8613271 - Flags: review?(nicolas.b.pierron)
Attachment #8613271 - Flags: review?(nicolas.b.pierron) → review+
https://hg.mozilla.org/mozilla-central/rev/4598396eb961
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: