Bug 1169967 - Add a forward declare for MIRGenerator. r=nbp